# LetterOn

./: AUTH_IMPLEMENTATION.md  AUTH_QUICK_REFERENCE.md  FULL_STACK_SETUP.md  INTEGRATION_SUMMARY.md  MIGRATION_COMPLETE.md  README.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  ARCHITECTURE.md  DYNAMODB_LOCAL_SETUP.md  Dockerfile  LAMBDA_FUNCTIONS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING_401.md  UV_SETUP.md  debug_user.py  deploy_aws.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  start_dynamodb_admin.sh  start_local_dynamodb.sh  start_moto_dynamodb.sh  test_login.py
backend/app/: __init__.py  dependencies.py  main.py  models.py  settings.py
backend/app/api/: __init__.py  auth.py  chat.py  letters.py  reminders.py  search.py
backend/app/prompts/: analyze_prompt.txt  chat_prompt.txt
backend/app/services/: __init__.py  auth.py  dynamo.py  lambda_client.py  reminder_scheduler.py  s3_client.py
backend/app/utils/: __init__.py  helpers.py  logger.py
backend/lambda-functions/: QUICKSTART.md  README.md  deploy-llm-handler.sh  deploy-ocr-handler.sh
backend/lambda-functions/iam-policies/: llm-handler-policy.json  ocr-handler-policy.json
backend/lambda-functions/llm-handler/package/: lambda_function.py
backend/lambda-functions/ocr-handler/: lambda_function.py
backend/scripts/: create_dynamodb_tables.py
backend/tests/: __init__.py  test_auth.py  test_dynamo.py
frontend/: BACKEND_INTEGRATION.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: auth-page.tsx  email-client.tsx  email-detail.tsx  email-list.tsx  upload-letters.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts  letter-categories.tsx  mock-data.ts  token-storage.ts
frontend/types/: email.ts
